<resources>
    <string name="app_name">Tô100ideia</string>
    <string name="email">Insira aqui seu email</string>
    <string name="acessar">Acessar</string>
    <string name="esqueci_minha_senha">️Esqueci minha senha</string>
    <string name="novo_usu_rio_clique_aqui">Novo usuário? Clique aqui!</string>
    <string name="n_s_temos_a_solu_o">Nós temos a SOLUÇÃO!</string>
    <string name="esque_a_a_indecis_o">Esqueça a indecisão...</string>
    <string name="e_m_a_i_l">E m a i l</string>
    <string name="s_e_n_h_a">S e n h a</string>
    <string name="computa_o_para_dispositivos_m_veis_prof_jean_paul_uniritter">Computação para Dispositivos Móveis - Prof. Jean Paul (Uniritter)</string>
    <string name="criado_por_douglas_otto_d_avila_abr_2023">Criado por Douglas Otto D\'Avila - Abr/2023</string>
    <string name="uniritter" translatable="false">Uniritter</string>
    <string name="avalia_es">Melhores Avaliações</string>
    <string name="mais_populares">Mais Populares</string>
    <string name="lan_amentos_em_breve">Lançamentos Recentes</string>
    <string name="language">pt-BR</string>
    <string name="listas_de_filmes">Bora escolher?</string>
    <string name="sair">Sair</string>
    <string name="t_tulos_com_melhores_avalia_es_de_acordo_com_o_site_themoviedb">Títulos com melhores avaliações de acordo com o site TheMovieDB.</string>
    <string name="melhores_avalia_es">Melhores Avaliações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>